<resources>
    <string name="app_name">MobiComp</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_data">Username or Email</string>
    <string name="login_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sign_up_username">Give Username</string>
    <string name="sign_up_email">Give Email</string>
    <string name="sign_up_password">Choose Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="messages">Messages</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="save_change">Save Changes</string>
    <string name="cancel_change">Cancel Changes</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="create_new_reminder">Create New Reminder</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="message">Message</string>
    <string name="reminder_date_time">Set Reminder Date &amp; Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="date_format">%1$02d/%2$02d/%3$d</string>
    <string name="time_format">%1$02d:%2$02d</string>
    <string name="reminder_icon">Choose Icon</string>
    <string name="take_pic">Take Picture</string>
    <string name="reminder_location">Choose Location</string>
    <string name="location_format">%1$02.04f : %2$02.04f</string>
    <string name="chosen_location">Chosen location</string>
    <string name="create_calendar_event">Create Calendar Event</string>
    <string name="location_format2">Lat: %1$02.04f, Long: %2$02.04f</string>
    <string name="creation_format">Date Created: %1s</string>
    <string name="reminder_format">Reminder Date: %1s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="create_notification">Create Notification</string>
    <string name="show_all">Show All Reminders</string>
    <string name="set_location">Set Location</string>

    <integer-array name="profile_pics">
        <item>@drawable/baseline_account_box_24</item>
        <item>@drawable/baseline_anchor_24</item>
        <item>@drawable/baseline_donut_large_24</item>
        <item>@drawable/baseline_group_work_24</item>
        <item>@drawable/baseline_support_24</item>
    </integer-array>

    <integer-array name="reminder_icons">
        <item>@drawable/baseline_accessibility_24</item>
        <item>@drawable/baseline_account_balance_24</item>
        <item>@drawable/baseline_add_shopping_cart_24</item>
        <item>@drawable/baseline_alarm_24</item>
        <item>@drawable/baseline_assignment_24</item>
        <item>@drawable/baseline_calendar_today_24</item>
        <item>@drawable/baseline_card_travel_24</item>
        <item>@drawable/baseline_commute_24</item>
        <item>@drawable/baseline_credit_card_24</item>
        <item>@drawable/baseline_delete_24</item>
        <item>@drawable/baseline_eco_24</item>
        <item>@drawable/baseline_explore_24</item>
        <item>@drawable/baseline_favorite_24</item>
        <item>@drawable/baseline_home_24</item>
        <item>@drawable/baseline_print_24</item>
        <item>@drawable/baseline_savings_24</item>
        <item>@drawable/baseline_shopping_cart_24</item>
        <item>@drawable/baseline_tour_24</item>
        <item>@drawable/baseline_work_24</item>
    </integer-array>
</resources>
