<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_signup"
        android:background="@color/colorPrimary"
        tools:context=".SignupActivity">

    <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="128dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/signUpUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_username"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/username"
            app:layout_constraintRight_toRightOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:inputType="text"/>

    <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/signUpUsername"
            app:layout_constraintRight_toRightOf="@+id/signUpUsername"
            app:layout_constraintTop_toBottomOf="@+id/signUpUsername" />

    <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_email"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="@id/email"
            app:layout_constraintRight_toRightOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:inputType="textEmailAddress" />

    <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/signUpEmail"
            app:layout_constraintRight_toRightOf="@+id/signUpEmail"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmail"/>

    <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_password"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="@id/password"
            app:layout_constraintRight_toRightOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/signUpPassword"
            app:layout_constraintLeft_toLeftOf="@id/signUpPassword"
            app:layout_constraintRight_toRightOf="@id/signUpPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>