<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".MessageActivity">

    <EditText
            android:id="@+id/reminderMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:lines="3"
            android:minLines="3"
            android:maxLines="3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textMultiLine"/>

    <TextView
            android:id="@+id/reminderDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reminder_date_time"
            app:layout_constraintLeft_toLeftOf="@id/reminderMessage"
            app:layout_constraintRight_toRightOf="@id/reminderMessage"
            app:layout_constraintTop_toBottomOf="@id/reminderMessage"/>

    <TextView
            android:id="@+id/reminderDate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/login_password"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@id/reminderDateTime"
            app:layout_constraintRight_toLeftOf="@id/reminderChooseDate"
            app:layout_constraintTop_toTopOf="@id/reminderChooseDate"
            app:layout_constraintBottom_toBottomOf="@id/reminderChooseDate"/>

    <Button
            android:id="@+id/reminderChooseDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:background="@color/colorAccent"
            app:layout_constraintRight_toRightOf="@id/reminderDateTime"
            app:layout_constraintLeft_toRightOf="@id/reminderDate"
            app:layout_constraintTop_toBottomOf="@id/reminderDateTime"/>

    <TextView
            android:id="@+id/reminderTime"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/login_password"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@id/reminderDate"
            app:layout_constraintRight_toLeftOf="@id/reminderChooseDate"
            app:layout_constraintTop_toTopOf="@id/reminderChooseTime"
            app:layout_constraintBottom_toBottomOf="@id/reminderChooseTime"/>

    <Button
            android:id="@+id/reminderChooseTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:background="@color/colorAccent"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="@id/reminderChooseDate"
            app:layout_constraintLeft_toRightOf="@id/reminderDate"
            app:layout_constraintTop_toBottomOf="@id/reminderChooseDate"/>

    <TextView
            android:id="@+id/reminderIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/reminder_icon"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="@id/reminderMessage"
            app:layout_constraintRight_toLeftOf="@id/reminderIconSpinner"
            app:layout_constraintTop_toTopOf="@id/reminderIconSpinner"
            app:layout_constraintBottom_toBottomOf="@id/reminderIconSpinner"/>

    <Spinner
            android:id="@+id/reminderIconSpinner"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toRightOf="@id/reminderIcon"
            app:layout_constraintRight_toRightOf="@id/reminderMessage"
            app:layout_constraintTop_toBottomOf="@id/reminderChooseTime"/>

    <ImageView
            android:id="@+id/reminderPic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            app:layout_constraintLeft_toLeftOf="@id/reminderDate"
            app:layout_constraintRight_toLeftOf="@id/reminderChooseDate"
            app:layout_constraintTop_toBottomOf="@id/reminderIconSpinner"/>

    <Button
            android:id="@+id/reminderTakePic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/take_pic"
            android:background="@color/colorAccent"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="@id/reminderChooseDate"
            app:layout_constraintLeft_toRightOf="@id/reminderDate"
            app:layout_constraintTop_toBottomOf="@id/reminderIconSpinner"/>

    <TextView
            android:id="@+id/reminderLocation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/password"
            android:textSize="12sp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@id/reminderMessage"
            app:layout_constraintRight_toLeftOf="@id/reminderChooseLocation"
            app:layout_constraintTop_toTopOf="@id/reminderChooseLocation"
            app:layout_constraintBottom_toBottomOf="@id/reminderChooseLocation"/>

    <Button
            android:id="@+id/reminderChooseLocation"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/reminder_location"
            android:background="@color/colorAccent"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="@id/reminderChooseDate"
            app:layout_constraintLeft_toRightOf="@id/reminderDate"
            app:layout_constraintTop_toBottomOf="@id/reminderTakePic"/>

    <CheckBox
            android:id="@+id/reminderCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reminderChooseLocation"
            app:layout_constraintLeft_toLeftOf="@id/reminderMessage" />

    <TextView
            android:id="@+id/reminderCalendarText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/create_calendar_event"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@id/reminderCalendar"
            app:layout_constraintRight_toRightOf="@id/reminderMessage"
            app:layout_constraintTop_toBottomOf="@id/reminderChooseLocation"
            app:layout_constraintBottom_toBottomOf="@id/reminderCalendar"/>

</androidx.constraintlayout.widget.ConstraintLayout>