<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="128dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/logIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/log_in"
            android:textSize="24sp"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@id/appName"
            app:layout_constraintLeft_toLeftOf="@id/appName"
            app:layout_constraintRight_toRightOf="@id/appName"/>

    <Button
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/logIn"
            app:layout_constraintLeft_toLeftOf="@id/appName"
            app:layout_constraintRight_toRightOf="@id/appName"/>

</androidx.constraintlayout.widget.ConstraintLayout>